# snowcap

./: .gitignore  Cargo.toml  README.md  justfile
api/lua/: msg.lua  snowcap-api-dev-1.rockspec  snowcap.lua  test_config.lua  widget.lua
api/lua/snowcap/: input.lua  layer.lua  log.lua  widget.lua
api/lua/snowcap/grpc/: client.lua  defs.lua  protobuf.lua
api/protobuf/snowcap/layer/v0alpha1/: layer.proto
api/protobuf/snowcap/widget/v0alpha1/: widget.proto
api/rust/: Cargo.toml
api/rust/examples/default_config/: main.rs
api/rust/src/: input.rs  layer.rs  lib.rs  snowcap.rs  util.rs  widget.rs
api/rust/src/widget/: font.rs
snowcap-api-defs/src/: lib.rs
src/: api.rs  clipboard.rs  handlers.rs  keyboard.rs  layer.rs  lib.rs  main.rs  pointer.rs  program.rs  server.rs  state.rs  wgpu.rs  widget.rs
src/api/: msg.rs
src/handlers/: keyboard.rs  pointer.rs
src/input/: keyboard.rs
src/util/: convert.rs
